html content added

--- a/index.html
+++ b/index.html
@@ -1,11 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Adrian's Portfolio</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" href="./images/tabicon.ico">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hello CTD!</h1>
+    <h1>Adrian Konarski's Portfolio</h1>
+
+    <img src="./images/notAjoke.png" alt="Just a joke!" width="200">
+
+    <section id="About">
+        <h2>About</h2>
+            <p>Hey there! I'm Adrian. I began my tech journey in 2018 when I first 
+                attended college majoring in Computer Information Systems. The problem 
+                solving instantly drew me in and I fell in love with the "Twilight Zone" 
+                that exists when you lock in to debug an algorithm or code (and then you 
+                look up and realize it's 2AM). I love being at the forefront of technological
+                innovation, especially with all the new technologies emerging today. Today, 
+                my two major interests are AI and Guitar!</p>
+    </section>
+
+    <section id="Experience">
+        <h2>Experience</h2>
+        <ul>
+            <li><strong>Currently:</strong> Senior studying C.I.S. at SUNY Old Westbury</li>
+            <li>Language Experience:
+                <ul>
+                    <li>Java</li>
+                    <li>Python</li>
+                    <li>C</li>
+                    <li>JavaScript</li>
+                </ul>
+            </li>
+            <li>Technology Proficiences:
+                <ul>
+                    <li>Experienced with:
+                        <ul>
+                            <li>Windows/Linux</li>
+                            <li>Google Cloud Platform (GCP) AI API</li>
+                        </ul>
+                    </li>
+                    <li>Familiar with:
+                        <ul>
+                            <li>MySQL</li>
+                            <li>Git</li>
+                        </ul>
+                    </li>
+                    </li>
+                </ul>
+            <li>Personal ML/AI Interests:
+                <ul>
+                    <li>Exploring local LLMs</li>
+                    <li>Experience with image generation tools like ComfyUI</li>
+                    <li>LoRA model creation</li>
+                </ul>
+            </li>
+        </ul> 
+    </section>
+
+    <section id="Connect">
+        <h2>Connect</h2>
+        <ul>
+            <li><a href="https://github.com/pleaseHelpImDumb" target="_blank" rel="noopener noreferrer">GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/adrian-kon " target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+            <li><a href="https://www.youtube.com/channel/UCadc39llVr-HeaB4jZagbaQ" target="_blank" rel="noopener noreferrer">YouTube</a></li>
+        </ul>
+    </section>
+    <iframe width="480" height="270" src="https://www.youtube.com/embed/5nTFp81yd-A" 
+    title="Texas!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <image src="./images/underConstruction.gif" width="300" height="150"></image>
 </body>
 </html>
