--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             <li><a href="https://www.youtube.com/channel/UCadc39llVr-HeaB4jZagbaQ" target="_blank" rel="noopener noreferrer">YouTube</a></li>
         </ul>
     </section>
+    <p>Besides technology, guitar is one of my hobbies too!</p>
     <iframe width="480" height="270" src="https://www.youtube.com/embed/5nTFp81yd-A" 
     title="Texas!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <image src="./images/underConstruction.gif" width="300" height="150"></image>
