--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./images/tabicon.ico">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./css/index.css">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>Adrian Konarski's Portfolio</h1>
@@ -14,7 +18,7 @@
 
     <section id="About">
         <h2>About</h2>
-            <p>Hey there! I'm Adrian. I began my tech journey in 2018 when I first 
+            <p id="about">Hey there! I'm Adrian. I began my tech journey in 2018 when I first 
                 attended college majoring in Computer Information Systems. The problem 
                 solving instantly drew me in and I fell in love with the "Twilight Zone" 
                 that exists when you lock in to debug an algorithm or code (and then you 
@@ -25,10 +29,10 @@
 
     <section id="Experience">
         <h2>Experience</h2>
-        <ul>
+        <ul id="outerList">
             <li><strong>Currently:</strong> Senior studying C.I.S. at SUNY Old Westbury</li>
             <li>Language Experience:
-                <ul>
+                <ul id="innerList">
                     <li>Java</li>
                     <li>Python</li>
                     <li>C</li>
@@ -36,7 +40,7 @@
                 </ul>
             </li>
             <li>Technology Proficiences:
-                <ul>
+                <ul id="innerList">
                     <li>Experienced with:
                         <ul>
                             <li>Windows/Linux</li>
@@ -64,12 +68,17 @@
     <section id="Connect">
         <h2>Connect</h2>
         <ul>
-            <li><a href="https://github.com/pleaseHelpImDumb" target="_blank" rel="noopener noreferrer">GitHub</a></li>
-            <li><a href="https://www.linkedin.com/in/adrian-kon " target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
-            <li><a href="https://www.youtube.com/channel/UCadc39llVr-HeaB4jZagbaQ" target="_blank" rel="noopener noreferrer">YouTube</a></li>
+            <li><a href="https://github.com/pleaseHelpImDumb" target="_blank" rel="noopener noreferrer">
+                <image src="./images/socialMediaIcons/github.png" alt="GitHub Profile" width="50px">
+            </a></li>
+            <li><a href="https://www.linkedin.com/in/adrian-kon" target="_blank" rel="noopener noreferrer">
+                <image src="./images/socialMediaIcons/linkedin.png" alt="GitHub Profile" width="50px">
+            </a></li><li><a href="https://www.youtube.com/channel/UCadc39llVr-HeaB4jZagbaQ" target="_blank" rel="noopener noreferrer">
+                <image src="./images/socialMediaIcons/youtube.png" alt="GitHub Profile" width="50px">
+            </a></li>
         </ul>
     </section>
-    <p>Besides technology, guitar is one of my hobbies too!</p>
+    <p id="guitar">Besides technology, guitar is one of my hobbies too!</p>
     <iframe width="480" height="270" src="https://www.youtube.com/embed/5nTFp81yd-A" 
     title="Texas!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <image src="./images/underConstruction.gif" width="300" height="150"></image>
