Added footer.js and skills/lang object syntax

--- a/personal.html
+++ b/personal.html
@@ -75,6 +75,6 @@
   
     <image src="./images/underConstruction.gif" width="300" height="150"></image>
 
-    <script src="./js/personal.js"></script>
+    <script src="./js/footer.js"></script>
 </body>
 </html>
